Changes
=======

0.30.0 (2020-07-30)
-------------------
- SameSite workaround with a specialized cookie, decoupled from django default

0.20.0 (2020-06-29)
-------------------
- Bugfix: Always save newly created users when ATTRIBUTE_MAPPING is missing in the config
- pySAML2 v5.3.0

0.19.1 (2020-06-15)
------------------
- Fixes creating new user with iexact lookup

0.19.0 (2020-06-03)
------------------

- Support several required fields during User creation
- Don't pass sigalg parameter when not signing login request
- ALLOW_SAML_HOSTNAMES validation for redirect
- Custom attribute mapping for Django user model (example)
- Slo absence workaround
- Metadata EntityID exception handling
- Fix unsigned authentication request to POST endpoint
- py38 Test fixes
- CI with Github actions
- Backend restructuring for easier subclassing
- Assertion consumer service now more extensible as a class-based view
  with hooks that can be overridden by subclass implementations.

0.18.1 (2020-02-15)
----------
- Fixed regression from 0.18.0. Thanks to OskarPersson

0.18.0 (2020-02-14)
----------
- Django 3.0 support. Thanks to OskarPersson
- forceauthn and allowcreate support. Thanks to peppelinux
- Dropped support for Python 3.4
- Also thanks to WebSpider, mhindery, DylannCordel, habi3000 for various fixes and improvements

Thanks to plumdog

0.17.2 (2018-08-29)
----------
- Upgraded pysaml2 dependency to version 4.6.0 which fixes security issue.

Thanks to plumdog

UNRELEASED
----------
- Allowed creating Users with multiple required fields.

0.17.1 (2018-07-16)
----------
- A 403 (permission denied) is now raised if a SAMLResponse is replayed, instead of 500.
- Dropped support for Python 3.3
- Upgraded pysaml2 dependency to version 4.5.0

Thanks to francoisfreitag, mhindery, vkurup, peppelinux

0.16.11 (2017-12-25)
----------
- Dropped compatibility for Python < 2.7 and Django < 1.8.