@@ -89,11 +89,11 @@ class Saml2BackendTests(TestCase):
             self.assertEqual(self.backend._user_lookup_attribute, 'username')
 
     def test_is_authorized(self):
-        self.assertTrue(self.backend.is_authorized({}, {}))
+        self.assertTrue(self.backend.is_authorized({}, {}, ''))
 
     def test_clean_attributes(self):
         attributes = {'random': 'dummy', 'value': 123}
-        self.assertEqual(self.backend.clean_attributes(attributes), attributes)
+        self.assertEqual(self.backend.clean_attributes(attributes, ''), attributes)
         
     def test_clean_user_main_attribute(self):
         self.assertEqual(self.backend.clean_user_main_attribute('value'), 'value')
@@ -273,11 +273,11 @@ class Saml2BackendTests(TestCase):
 class CustomizedBackend(Saml2Backend):
     """ Override the available methods with some customized implementation to test customization
     """
-    def is_authorized(self, attributes, attribute_mapping):
+    def is_authorized(self, attributes, attribute_mapping, idp_entityid: str, **kwargs):
         ''' Allow only staff users from the IDP '''
         return attributes.get('is_staff', (None, ))[0] == True
     
-    def clean_attributes(self, attributes: dict) -> dict:
+    def clean_attributes(self, attributes: dict, idp_entityid: str, **kwargs) -> dict:
         ''' Keep only age attribute '''
         return {
             'age': attributes.get('age', (None, )),
@@ -306,13 +306,13 @@ class CustomizedSaml2BackendTests(Saml2BackendTests):
             'cn': ('John', ),
             'sn': ('Doe', ),
             }
-        self.assertFalse(self.backend.is_authorized(attributes, attribute_mapping))
+        self.assertFalse(self.backend.is_authorized(attributes, attribute_mapping, ''))
         attributes['is_staff'] = (True, )
-        self.assertTrue(self.backend.is_authorized(attributes, attribute_mapping))
+        self.assertTrue(self.backend.is_authorized(attributes, attribute_mapping, ''))
 
     def test_clean_attributes(self):
         attributes = {'random': 'dummy', 'value': 123, 'age': '28'}
-        self.assertEqual(self.backend.clean_attributes(attributes), {'age': '28', 'is_staff': (None,), 'uid': (None,)})
+        self.assertEqual(self.backend.clean_attributes(attributes, ''), {'age': '28', 'is_staff': (None,), 'uid': (None,)})
         
     def test_clean_user_main_attribute(self):
         self.assertEqual(self.backend.clean_user_main_attribute('va--l__ u -e'), 'va__l___u__e')
